[package]
name = "rs-redis-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
fake-rs = { version = "0.1.0", features = ["name"] }
futures = "0.3.31"
futures-util = "0.3.31"
redis = { version = "0.28.1", features = ["aio", "tokio-comp"] }
thiserror = "2.0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = { version = "2.5.0" }
